--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fbn",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,6 +10,7 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "admin-lte": "^3.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
